--- a/test.html
+++ b/test.html
@@ -1,2 +1,21 @@
-esto es un test
-y solo un testadd one more line
+<!--tercera modificacion-->
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <title>Web Storage API</title>
+  <link rel="stylesheet" href="storage.css">
+  <script src="storage.js"></script>
+</head>
+<body>
+  <section id="cajaformulario">
+    <form name="formulario">
+      <p>Clave:<br><input type="text" name="clave" id="clave"></p>
+      <p>Valor:<br><textarea name="text" id="texto"></textarea></p>
+      <p><input type="button" name="grabar" id="grabar" value="Grabar"></p>
+    </form>
+  </section>
+  <section id="cajadatos">
+    No hay información disponible
+  </section>
+</body>
+</html>
