cuarta modificacion a traves de sublime

--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!--tercera modificacion-->
+<!--cuarta modificacion con sublime git-->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -15,7 +15,7 @@
     </form>
   </section>
   <section id="cajadatos">
-    No hay información disponible
+    NO INFORMATION
   </section>
 </body>
 </html>
