quinta modificacion a traves de sublime

--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!--cuarta modificacion con sublime git-->
+<!--qinta modificacion con sublime git-->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -15,7 +15,7 @@
     </form>
   </section>
   <section id="cajadatos">
-    NO INFORMATION
+    NO INFORMATION no no no
   </section>
 </body>
 </html>
