commit hecho en terminal a las 22.28

--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!--qinta modificacion con sublime git-->
+<!--sexta modificacion con sublime, commits a traves terminal-->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -16,7 +16,7 @@
   </section>
   <p>hola hola caracola</p>
   <section id="cajadatos">
-    NO INFORMATION no no no
+    NO INFORMATION sisisisisisis
   </section>
 </body>
 </html>
