add console.log icon tiempo

--- a/weather.html
+++ b/weather.html
@@ -50,6 +50,7 @@
 
 			    		var posicionEstacion = new google.maps.LatLng(datos.coord.lat, datos.coord.lon);
 			    		var iconTiempo = datos.weather[0].icon;
+			    		console.log('iconTiempo: '+iconTiempo)
 
 			    		//describe las propiedades del marcador
 			    		var marcador = new google.maps.Marker ({
