--- a/weather.html
+++ b/weather.html
@@ -57,7 +57,7 @@
 			    			position: posicionEstacion,
 			    			map: mapa,
 			    			//icon: creaCirculo(datos.main.humidity),
-			    			icon: 'http://openweathermap.org/img/w/'+iconTiempo+'.png',
+			    			icon: '/png/g3.png',
 			    			title: datos.name,
 			    			//crea una nueva propiedad del marcador con los datos que se mostraran en la infowindow
 			    			html: '<p><b>'+datos.name+"</b><br />"+
